<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.1"
    android:weightSum="1"
    android:orientation="vertical"
    android:id="@+id/StatusViewChild">

    <Button
        android:id="@+id/breakdown_btn"
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/breakdown"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:background="#d67601"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/stage_1_0"
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading_advice"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:background="#d67601"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/stage_1_1"
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/factory_entry"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:background="#d67601"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/stage_1_2"
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loaded"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:background="#d67601"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/stage_1_3"
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paper_received"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:background="#d67601"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/stage_1_4"
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip_start"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:background="#d67601"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp" />

</LinearLayout>
</ScrollView>