<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.1"
    android:weightSum="1"
    android:orientation="vertical"
    android:id="@+id/StatusViewChild">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.35">

        <Button
            android:id="@+id/breakdown_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="#d67601"
            android:text="@string/breakdown"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp" />


        <Button
            android:id="@+id/stage_2_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination_reached"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:background="#d67601"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/stage_2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gate_in"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:background="#d67601"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/sample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:background="#d67601"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="horizontal"
        android:id="@+id/stage_2_2"
        android:layout_weight="0.4">

        <Button
            android:id="@+id/sample_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sample_pass"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:background="#d67601"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/sample_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sample_fail"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:background="#d67601"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.35"
        android:orientation="vertical">

        <Button
            android:id="@+id/stage_2_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unloading_started"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:background="#d67601"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp" />

        <Button
            android:id="@+id/stage_2_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unloaded"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="18sp"
            android:background="#d67601"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp" />
    </LinearLayout>
</LinearLayout>
</ScrollView>